--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
         "postcss": "^8.4.18",
         "tailwindcss": "^3.2.1",
         "vite": "^4.0.0",
-        "vue": "^3.2.41"
+        "vue": "^3.3.8"
     },
     "dependencies": {
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-vue3": "^0.6.0",
-        "moment": "^2.29.4"
+        "moment": "^2.29.4",
+        "vuex": "^4.1.0"
     }
 }
