--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "dependencies": {
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-vue3": "^0.6.0",
+        "@popperjs/core": "^2.11.8",
+        "date-fns": "^2.30.0",
         "moment": "^2.29.4",
+        "v-calendar": "^3.1.2",
         "vuex": "^4.1.0"
     }
 }
