--- a/package.json
+++ b/package.json
@@ -21,9 +21,14 @@
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@popperjs/core": "^2.11.8",
+        "apexcharts": "^3.44.0",
+        "chart.js": "^4.4.0",
         "date-fns": "^2.30.0",
+        "lightbox2": "^2.11.4",
         "moment": "^2.29.4",
+        "qalendar": "^3.5.1",
         "v-calendar": "^3.1.2",
+        "vue3-apexcharts": "^1.4.4",
         "vuex": "^4.1.0"
     }
 }
